# GHCtestProgram

./: CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  source.cc  source.h
testdata/: file_0.txt  file_1.txt  file_10.txt  file_11.txt  file_12.txt  file_13.txt  file_14.txt  file_15.txt  file_2.txt  file_3.txt  file_4.txt  file_5.txt  file_6.txt  file_7.txt  file_8.txt  file_9.txt  testGen.py
